# pose4dof

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml
cmake/: pose4dofConfig.cmake.in
include/pose4dof/: Pose4DoF.h
src/: Pose3SLAMExample.cpp  Pose4DoF.cpp  Pose4DoFSLAMExample.cpp  pose2_numerical_derivative.cpp
test/: CMakeLists.txt  pose4dof_unit_tests.cpp
