<?xml version="1.0"?>
<package format="2">
  <name>pose4dof</name>
  <version>0.1.0</version>
  <description>GTSAM Pose4DoF catkin wrapper</description>
  <maintainer email="shapelim@mit.edu">Hyungtae Lim</maintainer>

  <license>MIT</license>
  <!-- <buildtool_depend>catkin</buildtool_depend> -->

  <!-- <depend>catkin</depend> -->
  <!-- <depend>roscpp</depend> -->

  <buildtool_depend>cmake</buildtool_depend>
  <depend>eigen</depend>

   <export>
     <build_type>cmake</build_type>
   </export>

</package>
